# transit-lakehouse-azure

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tflint.hcl  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/_workflows_pending_scope/: ci.yml  security.yml  terraform.yml
argocd/: README.md
argocd/applications/: scoring-api-dev.yaml  scoring-api-prod.yaml  scoring-api-rollout.yaml
argocd/projects/: transit-lakehouse.yaml
databricks/: databricks.yml
databricks/resources/: bronze_ingest.yml
dbt/: README.md  dbt_project.yml  packages.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml  sources_freshness.yml
dbt/models/bronze/: bronze__afc_taps.sql
dbt/models/gold/: dim_date.sql  dim_station.sql  fact_fare_revenue.sql  fact_ridership_hourly.sql  schema.yml
dbt/models/marts/: mart_event_demand_uplift.sql  mart_station_kpis.sql  schema.yml
dbt/models/silver/: silver__afc_taps.sql
dbt/profiles/: profiles.yml
docs/: architecture.md  runbook.md
docs/adr/: 0001-record-architecture-decisions.md  0002-azure-databricks-with-unity-catalog.md  0003-public-datasets-only.md  0004-medallion-architecture.md  0005-power-bi-as-bi-consumer.md  0006-dbt-incremental-strategy.md  0007-secrets-management.md
docs/data_contracts/: bronze.afc_taps.yaml  gold.fact_ridership_hourly.yaml
helm/transit-lakehouse/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/transit-lakehouse/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  pdb.yaml  poddisruptionbudget.yaml  scaledobject.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
notebooks/bronze/: 00_auto_loader_afc_taps.py
notebooks/gold/: 02_marts.py
notebooks/silver/: 01_dlt_pipeline.py
powerbi/: README.md
powerbi/deploy/: pbi_deploy.py
powerbi/docs/: datamodel.md  dax-measures.md  rls.md
powerbi/reports/: manifest.json
scripts/: event_calendar.json  generate_data_dictionary.py  otel-collector-config.yaml  prometheus.yml  wait-for-healthy.sh
scripts/grafana/dashboards/: bronze-freshness.json
scripts/grafana/provisioning/dashboards/: dashboards.yml
scripts/postgres-init/: 01_create_schemas.sql
scripts/reference_data/: README.md
scripts/reference_data/calgary-ct/: events.csv  stations.csv
scripts/reference_data/nyc-mta/: events.csv  stations.csv
src/: __init__.py
src/api/: __init__.py  main.py
src/common/: __init__.py  config.py  logging.py  otel.py  reference_data.py  settings.py  telemetry.py
src/ingestion/: __init__.py  afc_tap_generator.py  bronze_ingest.py  seed_reference_data.py
terraform/: README.md
terraform/environments/dev/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: main.tf  variables.tf
terraform/modules/databricks/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/e2e/playwright/: README.md  package.json  playwright.config.ts
tests/e2e/playwright/specs/api/: forecast.spec.ts  health.spec.ts
tests/integration/: test_minio_bronze.py
tests/unit/: test_afc_tap_generator.py  test_api.py  test_config.py  test_reference_data.py  test_settings.py
